<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/mi_medida1MP"
    android:layout_height="@dimen/mi_medida2WC"
    android:orientation="vertical"
    tools:context="studium.prctica.practicatema2.PracticaActivity">


    <LinearLayout
        android:layout_width="@dimen/mi_medida1MP"
        android:layout_height="@dimen/mi_medida2WC"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">


        <LinearLayout
            android:layout_width="@dimen/mi_medida2WC"
            android:layout_height="@dimen/mi_medida2WC"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="@dimen/mi_medida1MP"
                android:layout_height="@dimen/mi_medida2WC"
                android:layout_marginTop="15dp"
                android:gravity="right"
                android:text="@string/nombre1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/apellidos"
                android:layout_width="@dimen/mi_medida2WC"
                android:layout_height="@dimen/mi_medida2WC"
                android:layout_marginTop="28dp"
                android:text="@string/apellidos" />

            <TextView
                android:id="@+id/edad"
                android:layout_width="@dimen/mi_medida1MP"
                android:layout_height="@dimen/mi_medida2WC"
                android:layout_marginTop="28dp"
                android:gravity="right"
                android:text="@string/edad"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="@dimen/mi_medida1MP"
                android:layout_height="@dimen/mi_medida2WC"
                android:layout_marginTop="22dp"
                android:gravity="right"
                android:text="@string/genero" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="@dimen/mi_medida1MP"
                android:layout_height="@dimen/mi_medida2WC"
                android:layout_marginTop="58dp"
                android:gravity="right"
                android:text="@string/estado" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="@dimen/mi_medida1MP"
                android:layout_height="@dimen/mi_medida2WC"
                android:gravity="right"
                android:paddingTop="21dp"
                android:text="@string/hijos" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/mi_medida1MP"
            android:layout_height="@dimen/mi_medida2WC"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editText3"
                android:layout_width="@dimen/mi_medida1MP"
                android:layout_height="@dimen/mi_medida2WC"
                android:layout_weight="1"
                android:clickable="true"
                android:ems="10"
                android:hint="@string/ayudaIntroNombre"
                android:inputType="textCapWords" />


            <EditText
                android:id="@+id/editText4"
                android:layout_width="@dimen/mi_medida1MP"
                android:layout_height="@dimen/mi_medida2WC"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ayudaIntroApellidos"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="@dimen/mi_medida1MP"
                android:layout_height="@dimen/mi_medida2WC"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ayudaIntroEdad"
                android:inputType="number" />


            <RadioGroup
                android:id="@+id/radioButton1"
                android:layout_width="@dimen/mi_medida1MP"
                android:layout_height="@dimen/mi_medida1MP">

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="@dimen/mi_medida1MP"
                    android:layout_height="@dimen/mi_medida2WC"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/hombre"
                    tools:textSize="14sp" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="@dimen/mi_medida1MP"
                    android:layout_height="@dimen/mi_medida2WC"
                    android:layout_weight="1"
                    android:text="@string/mujer"
                    tools:textSize="14sp" />
            </RadioGroup>

            <Spinner
                android:id="@+id/lista1"
                android:layout_width="@dimen/mi_medida1MP"
                android:layout_height="@dimen/mi_medida2WC"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="@dimen/mi_medida2WC"
                android:layout_height="@dimen/mi_medida2WC"
                android:layout_weight="1"
                android:paddingLeft="6dp"
                android:text="@string/switch2"
                android:textOff="No"
                android:textOn="Si/Yes" />

            <LinearLayout
                android:layout_width="@dimen/mi_medida1MP"
                android:layout_height="@dimen/mi_medida1MP"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="@dimen/mi_medida2WC"
                    android:layout_height="@dimen/mi_medida2WC"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/btn1" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="@dimen/mi_medida2WC"
                    android:layout_height="@dimen/mi_medida2WC"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/btn2" />
            </LinearLayout>

        </LinearLayout><![CDATA[

        />
    ]]>
    </LinearLayout>

    <TextView
        android:id="@+id/textView0"
        android:layout_width="@dimen/mi_medida2WC"
        android:layout_height="@dimen/mi_medida2WC"
        android:layout_weight="1"
        android:text="@string/datosError"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textViewCorrecto"
        android:layout_width="@dimen/mi_medida1MP"
        android:layout_height="@dimen/mi_medida2WC"
        android:text=""
        android:textColor="@color/colorAceptar" />

</LinearLayout>